--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Bradley Hand, cursive;
+  font-family: "Google Sans", arial, sans-serif;
   color: white;
 }
 ul {
@@ -91,10 +91,10 @@ button {
 }
 small {
   color: black;
-  position: absolute;
+  position: relative;
   left: 500px;
   font-size: 20px;
-  bottom: 100px;
+  top: 500px;
 }
 
 .temperature strong {
@@ -143,7 +143,7 @@ h4 {
   text-decoration: none;
   color: black;
 }
-.popcity1 {
+.cityParis {
   width: 140px;
   height: 50px;
   border: 1px solid black;
